--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,9 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-
   },
   "dependencies": {
+    "@mlc-ai/web-llm": "^0.2.79",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
